# geochat

./: .gitignore  Main.hs  TODO  geogossip.cabal  notes.txt  schema.sql  server.hs  server.rb
GeoChat/: EventProcessor.hs  JSONInstances.hs  Types.hs
db/: gis.sql  postgis.sh  reload.sh  reset.sql  schema.sql  schema2.sql
public/: chat.js  chatmap.js  index.html  style.css
src/: Core.hs  EventProcessor.hs  JSONInstances.hs  Main.hs  TwitterOAuth.hs  Types.hs  WebsocketServer.hs  _Main.hs  notes.txt  test.hs
src/GeoChat/: EventProcessor.hs  JSONInstances.hs  Types.hs
