Name: geogossip-server
Version: 0.1

Synopsis: Websocket server for Geogossip project
Description:
  A rewrite of the Ruby Eventmachine using Haskell.
Author: Daniel Choi
Maintainer: dhchoi@gmail.com
Cabal-Version: >= 1.2
Library
  Hs-Source-Dirs: src
  GHC-Options: -Wall 
  Exposed-Modules: 
    GeoChat.Types
  Build-Depends: 
    websockets > 0.6,
    aeson >= 0.3.2.6,
    postgresql-simple >= 0.2.4.1

