Name: geogossip-server
Version: 0.1

Synopsis: Websocket server for Geogossip project
Description:
  Haskell.Geochat server 
Author: Daniel Choi
Maintainer: dhchoi@gmail.com
Cabal-Version: >= 1.2
Executable geochat
  Hs-Source-Dirs: src
  main-is: Main.hs

  GHC-Options: -Wall 
  Exposed-Modules: 
    GeoChat.Types
  Build-Depends: 
    base >= 4 && < 5, 
    ghc-prim,
    text >= 0.11.2.0,
    transformers,
    websockets > 0.6,
    websockets-snap >= 0.7.0.0,
    aeson >= 0.3.2.6,
    bytestring >= 0.9.2.1,
    time >= 1.4,
    vector >= 0.10,
    unordered-containers >= 0.2.2.1,
    containers >= 0.4.2.1,
    mtl >= 2.1.2,
    snap-core >= 0.9.2.2,
    snap-server >= 0.9.2.4,
    postgresql-simple >= 0.2.4.1,
    snaplet-postgresql-simple == 0.2.1,
    hoauth == 0.3.5

  ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                     -fno-warn-orphans -fno-warn-unused-do-bind
